implemented fixes from comments